# data-orchestration

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  environment-composer.yml  environment.yml  justfile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml
app/: __init__.py  utils.py  utils_geo.py
app/geo_reference/: __init__.py  building_footprints.py  core.py
dags/: echo.py
dags/cal_innovate/: feedback.py
dags/common/: defaults.py  geo.py  requests.py
dags/geo_reference/: __init__.py  building_footprints.py  core.py
dags/state_entities/: base_entities.py  budgets.py
