[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
exclude = __init__.py,versioneer.py
ignore =
    E20,   # Extra space in brackets
    E231,E241,  # Multiple spaces around ","
    E26,   # Comments
    E4,    # Import formatting
    E721,  # Comparing types instead of isinstance
    E731,  # Assigning lambda expression
    E741,  # Ambiguous variable names
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    F811,  # redefinition of unused 'loop' from line 10
max-line-length = 120
per-file-ignores =
    *_test.py:
        # Do not call assert False since python -O removes these calls
        B011,
    **/tests/*:
        # Do not call assert False since python -O removes these calls
        B011,

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY

[metadata]
license_files =
    LICENSE.txt

[mypy]
python_version = 3.9
# See https://github.com/python/mypy/issues/12286 for automatic multi-platform support
platform = linux
allow_untyped_decorators = true # would love to enable this, but airflow decorators are untyped
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_unreachable = true
